=======
CHANGES
=======

4.0.0a1 (unreleased)
--------------------

- Added support for Python 3


3.10.2 (2011-08-09)
-------------------

- Fixing brown bag release 3.10.1, failing tests.


3.10.1 (2011-08-04)
-------------------

- Replaced an undeclared test dependency on ``zope.app.authentication`` with
  ``zope.password``.

- Replaced the testing dependency on ``zope.app.zcmlfiles`` with explicit
  dependencies of a minimal set of packages.


3.10.0 (2011-01-25)
-------------------

- PUT raises ``405 MethodNotAllowed`` when the context cannot be adapted to
  ``zope.filerepresentation.interfaces.IWriteFile`` for existing objects
  resp. ``zope.filerepresentation.interfaces.IFileFactory`` for not existing
  ones.


3.9.0 (2010-09-17)
------------------

- Replaced a testing dependency on `zope.app.securitypolicy` with one on
  `zope.securitypolicy`.

- Removed test dependency on `zope.app.file` by moving the test which needs
  this package to `zope.app.file`.


3.8 (2010-04-19)
----------------

- Remove dependency on `zope.app.testing` by using the
  `zope.app.wsgi.testlayer` support instead.

  At the time of this writing the test dependency on
  `zope.app.zcmlfiles` cannot be removed however, because there is a
  dependency on `zope.app.file` for testing, which pulls in the world.

3.7 (2010-04-13)
----------------

- Remove unnecessary dependency on `zope.app.publisher`.

- Fix for an edge case:
  If someone does a ``defaultView`` for the context object and someone comes with
  a not allowed method, the exception view fails on ``getAdapters``.

3.6.1 (2010-01-08)
------------------

- Replaced the dependency on `zope.deprecation` with BBB imports

- Made the dependency on `zope.app.publisher` explicit

- Fix tests using a newer `zope.publisher` that requires `zope.login`.

3.6.0 (2009-05-23)
------------------

- Moved ``IHTTPException``, ``IMethodNotAllowed``, and ``MethodNotAllowed`` from