@@ -1,11 +1,13 @@
 language: python
+python:
+  - 2.7
+  - 3.3
+  - 3.4
+  - 3.5
+  - 3.6
 sudo: false
-env:
-    - TOXENV=py26
-    - TOXENV=py27
-    - TOXENV=py33
 install:
-    - travis_retry pip install tox
+    - pip install tox-travis
 script:
     - tox
 notifications:
