@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py33
+envlist = py26, py27, py33, py34, py35, py36, pypy
 
 [testenv]
 commands =
